--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,15 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    background-color: #f0f0f0;
+    background-image: linear-gradient(#000, rgb(36, 0, 0));
     text-align: center;
+    color:#fff;
+    
+}
+
+.glow{
+    color: #E00;
+    text-shadow: 0px 0px 15px #f33;
 }
 
 #passwordContainer, #mainContainer, #contentContainer {
@@ -15,17 +22,69 @@ body {
 
 img {
     margin-top: 20px;
+    background-color: whitesmoke;
+    border-radius: 10px;
+    
 }
 
 input[type="text"], input[type="password"] {
     padding: 10px;
     margin: 10px;
     width: 200px;
+    border-radius: 10px;
+    background-color: #100;
+    color: #fee;
+    text-shadow: none;
+    box-shadow: none;
+    outline:none;
+    border:none;
+    transition: box-shadow 500ms;
+    box-shadow: 0px 0px 20px rgb(255, 0, 0) ;
+    transition: 500ms;
+}
+::placeholder{
+    color:#900
+}
+input:focus{
+    color:none;
+    border-color: none;
+    outline:none;
+    box-shadow: none;
+    /*transition: box-shadow 500ms;*/
+    box-shadow: 0px 0px 20px rgb(26, 255, 0) ;
+    
+}
+input:focus::placeholder{
+    transition: 500ms;
+    color:rgb(7, 74, 0);
+}
+input:hover{
+    translate: 0px -4px;
+    
+}
+::placeholder:active{
+    color:rgb(26, 255, 0);
 }
 
 button {
+    transition: box-shadow 500ms;
     padding: 10px 20px;
+    border-radius: 10px;
     cursor: pointer;
+    background-color: #100;
+    color: #D00;
+    text-shadow: 0px 0px 15px #f00;
+    border:none;
+    box-shadow: 0px 0px 20px rgb(255, 0, 0) ;
+    transition: 500ms;
+}
+button:active{
+    box-shadow: 0px 0px 20px rgb(26, 255, 0) ;
+    color:rgb(26, 255, 0);
+}
+button:hover{
+    translate: 0px -4px;
+    
 }
 
 p {
